[tool.poetry]
name = "pyconnect"
version = "0.42.0"
description = "LinuxForHealth Connectors for Inbound Data Processing"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
asyncio-nats-client = "^0.11.4"
confluent-kafka = "^1.6.1"
fastapi = "^0.63.0"
pyaml = "^20.4.0"
requests = "^2.25.1"
linuxforhealth-xworkflows = "^1.0.0"
"fhir.resources" = "^6.1.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
httpx = "^0.17.1"
slowapi = "^0.1.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
autopep8 = "^1.5.6"
pylint = "^2.7.4"
pytest = "^6.2.3"
pytest-asyncio = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
